export enum ScreenEnum {
  // App
  //
  LoadingApp = 'LoadingApp',
  // Launching
  // StartMenu
  ImportUfvk = 'ImportUfvk',
  //
  LoadedApp = 'LoadedApp',
  ComputingTxContext = 'ComputingTxContext',
  AddressBook = 'AddressBook',
  History = 'History',
  ValueTransferDetail = 'ValueTransferDetail',
  Send = 'Send',
  Confirm = 'Confirm',
  ScannerAddress = 'ScannerAddress',
  Receive = 'Receive',
  AddressList = 'AddressList',
  MessagesList = 'MessagesList',
  Settings = 'Settings',
  // Drawer
  About = 'About',
  MixnetDoctor = 'MixnetDoctor',
  Pools = 'Pools',
  SyncReport = 'SyncReport',
  Seed = 'Seed',
  Rescan = 'Rescan',
  Insight = 'Insight',
  Memo = 'Memo',
}
