...
                      borderRadius: 10,
                      minWidth: 25,
                      minHeight: 25,
                    }}
                  >
                    <View
                      testID="header.checkicon"
                      style={{
                        flexDirection: 'row',
                        justifyContent: 'center',
                        alignItems: 'center',
                        padding: 3,
                      }}
...
