...
            flexDirection: 'row',
            justifyContent: 'center',
            alignItems: 'center',
          }}
        >
          <Button
            testID="settings.button.save"
            disabled={disabled || disabledButton}
            type={ButtonTypeEnum.Primary}
            title={translate('settings.save') as string}
            onPress={() => {
              setTimeout(async () => {
                await saveSettingsRef.current();
...
            snapPoints={settingsSnapPoints}
            header={settingsHeader}
            renderFooter={renderSettingsFooter}
          >
            <BottomSheetScrollView
              keyboardShouldPersistTaps="handled"
              testID="settings.scroll-view"
              bounces={false}
              alwaysBounceVertical={false}
              style={{
                flex: 1,
              }}
              contentContainerStyle={{
...
                    </View>
                  )}
                </View>
              )}

              <TouchableOpacity
                testID="settings.about"
                disabled={disabled}
                onPress={() => navigation.navigate(RouteEnum.About)}
                style={{
                  flexDirection: 'row',
                  alignItems: 'center',
                  justifyContent: 'space-between',
...
