...
      <AppSheet
        ref={aboutSheetRef}
        snapPoints={aboutSnapPoints}
        header={aboutHeader}
      >
        <BottomSheetScrollView
          testID="about.scroll-view"
          bounces={false}
          alwaysBounceVertical={false}
          style={{ flex: 1 }}
          contentContainerStyle={{
            flexDirection: 'column',
            alignItems: 'stretch',
...
