...
              onPress={() => onItemSelectedWrapper(MenuItemEnum.Chats)}
              style={{ ...item, color: colors.primary }}>
              {translate('messages.title-chats') as string}
            </RegText>

            <RegText
              testID="menu.addressbook"
              onPress={() => onItemSelectedWrapper(MenuItemEnum.AddressBook)}
              style={item}>
              {translate('loadedapp.addressbook') as string}
            </RegText>

            {!(mode === ModeEnum.basic && valueTransfersTotal !== null && valueTransfersTotal === 0) && (
...
            {mode === ModeEnum.basic &&
              valueTransfersTotal !== null &&
              valueTransfersTotal === 0 &&
              netInfo.isConnected &&
              selectServer !== SelectServerEnum.offline && (
                <RegText
                  testID="menu.loadwalletfromseed"
                  onPress={() => onItemSelectedWrapper(MenuItemEnum.LoadWalletFromSeed)}
                  style={item}>
                  {translate('loadedapp.loadwalletfromseed-basic') as string}
                </RegText>
              )}
            {mode === ModeEnum.basic && !readOnly && selectServer !== SelectServerEnum.offline && (
...
