...
            flexDirection: 'row',
            justifyContent: 'center',
            alignItems: 'center',
          }}
        >
          <Button
            testID="addressbook.button.new"
            type={ButtonTypeEnum.Primary}
            title={translate('addressbook.new') as string}
            onPress={() => newAddressBookItem()}
          />
        </View>
      </BottomSheetFooter>
...
            </ScrollView>
          </View>
          <ScrollView
            ref={scrollViewRef}
            onScroll={handleScroll}
            scrollEventThrottle={100}
            testID="addressbook.scroll-view"
            keyboardShouldPersistTaps="handled"
            bounces={false}
            alwaysBounceVertical={false}
            style={{
              flex: 1,
              backgroundColor: colors.bgSurface,
...
