...
              just won't sync until a server is chosen). Show it both online and
              in Offline mode. */}
          {((netInfo.isConnected &&
            selectServer !== SelectServerEnum.offline) ||
            selectServer === SelectServerEnum.offline) && (
            <Button
              testID="loadingapp.createnewwallet"
              type={ButtonTypeEnum.Primary}
              title={translate('loadingapp.createnewwallet') as string}
              disabled={actionButtonsDisabled}
              onPress={() => {
                if (walletExists) {
                  showConfirm({
...
