...

    const fnTabBarIcon = (route, focused) => {
      var iconName;

      if (route.name === 'WALLET') {
        iconName = faList;
      } else if (route.name === 'SEND') {
        iconName = faUpload;
      } else if (route.name === "UA's") {
        iconName = faDownload;
      } else if (route.name === 'LEGACY') {
        iconName = faAddressBook;
      } else {
...
